# language_change_methods

./: README.md  requirements.txt  setup.cfg  setup.cfg.rename  setup.py
src/language_change_methods/: __init__.py  cross_entropy.py  cross_entropy_models.py  cross_entropy_sampling.py  features.py  fluctuation_analysis.py  ufa.py  utility_functions.py  vnc.py  word_clouds.py  word_vector_change.py
src/language_change_methods.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
