[metadata]
name = language_change_methods
version = 0.0.1
author = Edward Deardeb
author_email = edward.j.dearden@gmail.com
description = A package containing methods for looking at language change.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dearden/language_change_methods
project_urls =
    Bug Tracker = https://github.com/dearden/language_change_methods/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
